# split-bill

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  app.js  config.py  detail.html  docker-compose.yml  index.html  preview.html  pyproject.toml  requirements.txt  restaurant.js
.minio/: configure.sh  local.sh
BE/: config.py  docker-compose.yml  main.py  translate.py
BE/api/: auth.py  bill.py  main.py  routers.py
BE/app/common/: auth.py  constants.py  handlers.py  response.py  social.py
BE/core/common/: api.py  auth.py  constants.py  database.py  exceptions.py  i18n.py  loggers.py
BE/core/services/: aws.py  base.py
BE/migrations/: env.py
BE/migrations/versions/: 3ea2b095a373_init_model_user.py  b4b715020483_init_model_bill.py
api/: auth.py  bill.py  file.py  main.py  routers.py
app/auth/models/: __init__.py  auth_user.py
app/auth/schemas/: auth.py
app/common/: auth.py  exceptions.py  handlers.py  permissions.py
core/common/: api.py  auth.py  database.py  exceptions.py  timezone.py
core/models/: __init__.py  base.py
core/utils/: slugify.py
migrations/: env.py
migrations/versions/: 5882ce18ade1_add_column_bill_participant.py  9d241fd441a3_update_auth.py  b4b715020483_init_model_bill.py
statics/: robots.txt  sitemap.xml
templates/: about.html  app-preview.js  bill_not_found.html  cookies_policy.html  detail.html  header.html  index.html  login.html  narbar.html  navbar.html  not_found.html  preview.html  privacy_policy.html  restaurant.html  share.html  terms_of_service.html
web/: home.py  other.py  routers.py
(+19 files in other folders)
